@@ -10,7 +10,11 @@ dh-make-perl (0.69-1) UNRELEASED; urgency=low
   * Debian::Dependency: Allow architecture restrictions in dependencies.
     For now this information is just ignored.
 
- -- Damyan Ivanov <dmn@debian.org>  Wed, 05 May 2010 08:40:51 +0300
+  [ Salvatore Bonaccorso ]
+  * Add support of Breaks field for binary package stanzas in debian/control
+    to Debian::Control::Stanza::Binary.
+
+ -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Wed, 02 Jun 2010 12:42:21 +0200
 
 dh-make-perl (0.68-1) unstable; urgency=low
 
